# galaxy-compiler

./: Cargo.toml  rustfmt.toml
src/: ast.rs  errors.rs  interner.rs  ir.rs  main.rs  parser.rs  reg_allocator.rs  rustc-ice-2025-01-12T07_31_19-28444.txt  symbol_table.rs  token.rs  tokenizer.rs  visitor.rs
src/name_resolution/: mod.rs
src/parser/: error_reporting.rs  expression.rs  item.rs  mod.rs  pattern.rs  statement.rs
src/symbol_table/: mod.rs  sym_visitor.rs  symbol_table.rs
src/tests/: parser_tests.rs  tokenizing_test.txt
src/type_checking/: constraints.rs
