[package]
name = "galaxy-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.3.7"
thiserror = "1.0.48"

[profile.dev]
# This prevents the error where clippy lints older versions of the file. No clue what causes that error but it is iritating.
# incremental = false